# koncierge

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: publish.yml
auth/: build.gradle.kts
auth-compose/: build.gradle.kts
biometric/: build.gradle.kts
biometric/src/macosMain/kotlin/touchId/: Auth.kt
biometric/src/mingwMain/kotlin/winbio/structures/: UnitSchema.kt
biometric/src/nativeInterop/cinterop/: touchId.def
biometric/src/nativeInterop/windows-hello/include/: windows_hello.h
biometry/src/macosMain/kotlin/touchId/: Auth.kt
biometry/src/mingwMain/kotlin/winbio/: Cast.kt  Sensors.kt
biometry/src/mingwMain/kotlin/winbio/structures/: Identity.kt
biometry/src/nativeInterop/cinterop/: wbf.def  windowsHello.def
buildSrc/src/main/kotlin/: PublishingExtension.kt
gradle/: libs.versions.toml
src/androidMain/: AndroidManifest.xml
src/androidMain/kotlin/com/ucasoft/koncierge/: BiometricAuthenticator.kt  Koncierge.android.kt
src/commonMain/kotlin/com/ucasoft/koncierge/: BiometricResults.kt  Koncierge.kt
src/jvmMain/kotlin/com/ucasoft/koncierge/: Koncierge.jvm.kt  WindowsHelloJvmBiometricAuthenticator.kt
src/macosMain/kotlin/com/ucasoft/koncierge/: Koncierge.macos.kt  main.kt
src/macosMain/kotlin/touchId/: Utils.kt
src/mingwMain/kotlin/com/ucasoft/koncierge/: Koncierge.mingw.kt  (+1 more)
src/mingwMain/kotlin/winbio/: Cast.kt  Sensors.kt
src/mingwMain/kotlin/winbio/structures/: Identity.kt  UnitSchema.kt
src/mingwMain/kotlin/winhello/: WindowsHello.kt
src/nativeInterop/cinterop/: windowsHello.def
src/nativeInterop/windows-hello/: CMakeLists.txt
src/nativeInterop/windows-hello/include/: windows_hello.h
src/nativeInterop/windows-hello/src/: windows_hello.c  windows_hello.cpp
(+15 files in other folders)
